Criando profile de teste

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-#server.port=${port:8081} mudar a porta da aplicação
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
-#exibir no console as consultas
-spring.jpa.show-sql=true 
-spring.jpa.properties.hibernate.format_sql=true
+##server.port=${port:8081} mudar a porta da aplicação
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.username=sa
+#spring.datasource.password=
+##exibir no console as consultas
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#migrado para profiles específicos (Teste, Desenvolvimento, Producao):
+spring.profiles.active=test
