--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,5 @@
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 #migrado para profiles específicos (Teste, Desenvolvimento, Producao):
-spring.profiles.active=test
+##spring.profiles.active=test
+spring.profiles.active=dev
