Implementando toString de Pedido

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@
 #spring.jpa.properties.hibernate.format_sql=true
 #migrado para profiles específicos (Teste, Desenvolvimento, Producao):
 ##spring.profiles.active=test
-spring.profiles.active=dev
+spring.profiles.active=test
