MockEmailService com Logger. Padrões Strategy e Template Method

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@
 #migrado para profiles específicos (Teste, Desenvolvimento, Producao):
 ##spring.profiles.active=test
 spring.profiles.active=test
+
+default.sender=eduardohmferreira@gmail.com
+dafault.recipient=eduardo_hen@yahoo.com.br
