Implementando SmtpEmailService com servidor do Google

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 #migrado para profiles específicos (Teste, Desenvolvimento, Producao):
+spring.profiles.active=dev
 ##spring.profiles.active=test
-spring.profiles.active=test
 
 default.sender=eduardohmferreira@gmail.com
 dafault.recipient=eduardo_hen@yahoo.com.br
