--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -5,3 +5,13 @@ spring.datasource.password=
 #exibir no console as consultas
 spring.jpa.show-sql=true 
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.mail.host=email-ssl.com.br
+spring.mail.username=eduardo@prosanearinfo.com.br
+spring.mail.password=###
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.socketFactory.port = 465
+spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback = false
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.properties.mail.smtp.ssl.enable = true
