--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@
 #spring.jpa.properties.hibernate.format_sql=true
 #migrado para profiles específicos (Teste, Desenvolvimento, Producao):
 ##spring.profiles.active=dev
-spring.profiles.active=test
+spring.profiles.active=dev
 
 default.sender=eduardohmferreira@gmail.com
 dafault.recipient=eduardo_hen@yahoo.com.br
