Implementando autenticação e geração do token JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.profiles.active=dev
 
 default.sender=eduardohmferreira@gmail.com
 dafault.recipient=eduardo_hen@yahoo.com.br
+
+jwt.secret=SequenciaDeCaracteresParaAssinarToken
+#60.000 ms
+jwt.expiration=60000
