Enviando imagens via endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ jwt.secret=SequenciaDeCaracteresParaAssinarToken
 #60.000 ms
 jwt.expiration=86400000
 
-aws.access_key_id=AKIAJXD4IP6CC2ZV7TVQ
-aws.secret_access_key=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
+aws.access_key_id=
+aws.secret_access_key=
 s3.bucket=ehsolucoes-spring-ionic
 s3.region=sa-east-1
