Ajuste para produção

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,7 +6,7 @@ spring.jpa.properties.hibernate.format_sql = false
 
 spring.mail.host=email-ssl.com.br
 spring.mail.username=eduardo@prosanearinfo.com.br
-spring.mail.password=pro@1304@
+spring.mail.password=#
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.socketFactory.port = 465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
