--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,8 @@ jwt.secret=knf398@16121982
 #60.000 ms
 jwt.expiration=86400000
 
-aws.access_key_id=AKIAJE4U5DFL6W6E4EXQ
-aws.secret_access_key=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
+aws.access_key_id=
+aws.secret_access_key=
 s3.bucket=ehsolucoes-spring-ionic
 s3.region=sa-east-1
 
